--- a/frontend/src/components/Whiteboard.css
+++ b/frontend/src/components/Whiteboard.css
@@ -128,6 +128,7 @@
     border-radius: 2px;
     outline: none;
     -webkit-appearance: none;
+    appearance: none;
 }
 
 .stroke-width input[type="range"]::-webkit-slider-thumb {
